.happypack/s-1970711857
/Users/liuyihao/Code/kr-admin/src/Configs/dictionary.js: Unexpected token (2:0)
SyntaxError: /Users/liuyihao/Code/kr-admin/src/Configs/dictionary.js: Unexpected token (2:0)
[0m [90m 1 | [39mmodule[33m.[39mexports [33m=[39m {
[31m[1m>[22m[39m[90m 2 | [39m[33m<<[39m[33m<<[39m[33m<<[39m[33m<[39m [33mHEAD[39m
 [90m   | [39m[31m[1m^[22m[39m
 [90m 3 | [39m	[32m"ContractType"[39m[33m:[39m [{
 [90m 4 | [39m		[32m"code"[39m[33m:[39m [35m1[39m[33m,[39m
 [90m 5 | [39m		[32m"desc"[39m[33m:[39m [32m"æ‰¿ç§Ÿæ„å‘ä¹¦"[39m[33m,[39m[0m
    at Parser.pp$5.raise (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:4215:13)
    at Parser.pp.unexpected (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1599:8)
    at Parser.pp$3.parseIdentifier (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:4101:10)
    at Parser.pp$3.parsePropertyName (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3924:103)
    at Parser.<anonymous> (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5270:23)
    at Parser.parsePropertyName (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5419:23)
    at Parser.pp$3.parseObj (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3836:12)
    at Parser.pp$3.parseExprAtom (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3529:19)
    at Parser.parseExprAtom (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:6307:22)
    at Parser.pp$3.parseExprSubscripts (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3305:19)
    at Parser.pp$3.parseMaybeUnary (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3285:19)
    at Parser.pp$3.parseExprOps (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3215:19)
    at Parser.pp$3.parseMaybeConditional (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3192:19)
    at Parser.pp$3.parseMaybeAssign (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3155:19)
    at Parser.parseMaybeAssign (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5603:20)
    at Parser.pp$3.parseMaybeAssign (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3178:23)
    at Parser.parseMaybeAssign (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5603:20)
    at Parser.pp$3.parseExpression (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:3117:19)
    at Parser.pp$1.parseStatement (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1746:19)
    at Parser.parseStatement (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:5130:22)
    at Parser.pp$1.parseBlockBody (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:2105:21)
    at Parser.pp$1.parseTopLevel (/Users/liuyihao/Code/kr-admin/node_modules/.6.13.1@babylon/lib/index.js:1617:8)